syntax = "proto3";

package gogrpcmessage;

option go_package="github.com/programzheng/gogrpcmessage";

service Greeter {
  rpc SayMessage (MessageRequest) returns (MessageResponse) {}
  rpc RouteChat (stream RouteNote) returns (stream RouteNote) {}
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string message = 1;
}

message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}